--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
 		"format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ."
 	},
 	"devDependencies": {
-		"@iconify-json/mdi": "^1.1.7",
+		"@iconify-json/mdi": "^1.1.9",
 		"@sveltejs/adapter-vercel": "^1.0.0-next.46",
 		"@sveltejs/kit": "next",
 		"@tsconfig/svelte": "^3.0.0",
-		"@unocss/preset-icons": "^0.30.10",
+		"@unocss/preset-icons": "^0.30.11",
 		"autoprefixer": "^10.4.4",
 		"cookie": "^0.4.2",
 		"eslint": "^8.12.0",
@@ -23,23 +23,19 @@
 		"eslint-plugin-svelte3": "^3.2.1",
 		"mdsvex": "^0.10.5",
 		"npm": "^8.6.0",
-		"prettier": "^2.6.1",
+		"prettier": "^2.6.2",
 		"prettier-plugin-svelte": "^2.5.0",
-		"prisma": "^3.11.1",
 		"svelte": "^3.46.6",
 		"svelte-check": "^2.4.6",
 		"svelte-paginate": "^0.0.1",
-		"svelte-preprocess": "^4.10.4",
+		"svelte-preprocess": "^4.10.5",
 		"tslib": "^2.3.1",
 		"typescript": "^4.6.3",
-		"unocss": "^0.30.10",
-		"vite": "^2.9.1"
+		"unocss": "^0.30.11"
 	},
 	"type": "module",
 	"dependencies": {
-		"@notionhq/client": "^1.0.4",
-		"@prisma/client": "^3.11.0",
-		"@splidejs/svelte-splide": "^0.1.18",
+		"@splidejs/svelte-splide": "^0.2.1",
 		"firebase": "^9.6.10",
 		"svelte-click-outside": "^1.0.0"
 	}
