--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
 		"@sveltejs/adapter-vercel": "^1.0.0-next.46",
 		"@sveltejs/kit": "next",
 		"@tsconfig/svelte": "^3.0.0",
-		"@unocss/preset-icons": "^0.31.0",
+		"@unocss/preset-icons": "^0.31.2",
 		"autoprefixer": "^10.4.4",
-		"cookie": "^0.4.2",
+		"cookie": "^0.5.0",
 		"eslint": "^8.13.0",
 		"eslint-config-prettier": "^8.3.0",
 		"eslint-plugin-svelte3": "^3.2.1",
@@ -31,11 +31,12 @@
 		"svelte-preprocess": "^4.10.5",
 		"tslib": "^2.3.1",
 		"typescript": "^4.6.3",
-		"unocss": "^0.31.0"
+		"unocss": "^0.31.2"
 	},
 	"type": "module",
 	"dependencies": {
 		"@splidejs/svelte-splide": "^0.2.1",
+		"@unocss/reset": "^0.31.2",
 		"firebase": "^9.6.10",
 		"svelte-click-outside": "^1.0.0"
 	}
