--- a/package.json
+++ b/package.json
@@ -11,33 +11,34 @@
 		"format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ."
 	},
 	"devDependencies": {
-		"@iconify-json/mdi": "^1.1.9",
+		"@iconify-json/mdi": "^1.1.10",
 		"@sveltejs/adapter-vercel": "^1.0.0-next.46",
 		"@sveltejs/kit": "next",
 		"@tsconfig/svelte": "^3.0.0",
-		"@unocss/preset-icons": "^0.31.17",
+		"@unocss/preset-icons": "^0.32.8",
 		"autoprefixer": "^10.4.5",
 		"cookie": "^0.5.0",
 		"eslint": "^8.14.0",
 		"eslint-config-prettier": "^8.3.0",
 		"eslint-plugin-svelte3": "^3.2.1",
 		"mdsvex": "^0.10.5",
-		"npm": "^8.7.0",
 		"prettier": "^2.6.2",
 		"prettier-plugin-svelte": "^2.7.0",
-		"svelte": "^3.47.0",
+		"svelte": "^3.48.0",
 		"svelte-check": "^2.7.0",
 		"svelte-paginate": "^0.0.1",
 		"svelte-preprocess": "^4.10.6",
 		"tslib": "^2.4.0",
-		"typescript": "^4.6.3",
-		"unocss": "^0.31.17"
+		"typescript": "^4.6.4",
+		"unocss": "^0.32.8"
 	},
 	"type": "module",
 	"dependencies": {
+		"@graphql-yoga/render-graphiql": "^2.4.0",
 		"@splidejs/svelte-splide": "^0.2.1",
-		"@unocss/reset": "^0.31.17",
-		"firebase": "^9.6.11",
+		"@unocss/reset": "^0.32.8",
+		"firebase": "^9.7.0",
+		"graphql": "^16.4.0",
 		"svelte-click-outside": "^1.0.0"
 	}
 }
