--- a/package.json
+++ b/package.json
@@ -11,16 +11,16 @@
 		"format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ."
 	},
 	"devDependencies": {
-		"@iconify-json/mdi": "^1.1.11",
+		"@iconify-json/mdi": "^1.1.12",
 		"@sveltejs/adapter-vercel": "^1.0.0-next.46",
 		"@sveltejs/kit": "next",
 		"@tsconfig/svelte": "^3.0.0",
-		"@unocss/preset-icons": "^0.33.0",
+		"@unocss/preset-icons": "^0.33.2",
 		"autoprefixer": "^10.4.7",
 		"cookie": "^0.5.0",
 		"eslint": "^8.15.0",
 		"eslint-config-prettier": "^8.3.0",
-		"eslint-plugin-svelte3": "^3.2.1",
+		"eslint-plugin-svelte3": "^4.0.0",
 		"mdsvex": "^0.10.5",
 		"prettier": "^2.6.2",
 		"prettier-plugin-svelte": "^2.7.0",
@@ -30,13 +30,14 @@
 		"svelte-preprocess": "^4.10.6",
 		"tslib": "^2.4.0",
 		"typescript": "^4.6.4",
-		"unocss": "^0.33.0"
+		"unocss": "^0.33.2"
 	},
 	"type": "module",
 	"dependencies": {
+		"@iconify-json/tabler": "^1.1.13",
 		"@splidejs/svelte-splide": "^0.2.1",
-		"@unocss/reset": "^0.33.0",
-		"firebase": "^9.8.0",
+		"@unocss/reset": "^0.33.2",
+		"firebase": "^9.8.1",
 		"svelte-click-outside": "^1.0.0"
 	}
 }
