--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
 		"format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ."
 	},
 	"devDependencies": {
-		"@iconify-json/mdi": "^1.1.22",
-		"@sveltejs/adapter-vercel": "^1.0.0-next.46",
+		"@iconify-json/mdi": "^1.1.24",
+		"@sveltejs/adapter-vercel": "next",
 		"@sveltejs/kit": "next",
 		"@tsconfig/svelte": "^3.0.0",
 		"autoprefixer": "^10.4.7",
@@ -21,22 +21,22 @@
 		"eslint-config-prettier": "^8.3.0",
 		"eslint-plugin-svelte3": "^4.0.0",
 		"mdsvex": "^0.10.6",
-		"prettier": "^2.6.2",
+		"prettier": "^2.7.1",
 		"prettier-plugin-svelte": "^2.7.0",
 		"svelte": "^3.48.0",
-		"svelte-check": "^2.7.2",
+		"svelte-check": "^2.8.0",
 		"svelte-paginate": "^0.0.1",
 		"svelte-preprocess": "^4.10.7",
 		"tslib": "^2.4.0",
 		"typescript": "^4.7.4",
-		"unocss": "^0.39.3"
+		"unocss": "^0.42.0"
 	},
 	"type": "module",
 	"dependencies": {
-		"@iconify-json/tabler": "^1.1.16",
+		"@iconify-json/tabler": "^1.1.18",
 		"@splidejs/svelte-splide": "^0.2.5",
 		"@unocss/reset": "^0.39.3",
-		"firebase": "^9.8.3",
+		"firebase": "^9.8.4",
 		"svelte-click-outside": "^1.0.0",
 		"svelte-pagination": "^0.0.1"
 	}
