--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "sveltesite",
 	"version": "0.0.1",
 	"scripts": {
-		"dev": "svelte-kit dev",
+		"dev": "vite dev",
 		"build": "svelte-kit build",
 		"package": "svelte-kit package",
 		"preview": "svelte-kit preview",
@@ -11,13 +11,13 @@
 		"format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ."
 	},
 	"devDependencies": {
-		"@iconify-json/mdi": "^1.1.24",
+		"@iconify-json/mdi": "^1.1.25",
 		"@sveltejs/adapter-vercel": "next",
 		"@sveltejs/kit": "next",
 		"@tsconfig/svelte": "^3.0.0",
 		"autoprefixer": "^10.4.7",
 		"cookie": "^0.5.0",
-		"eslint": "^8.18.0",
+		"eslint": "^8.19.0",
 		"eslint-config-prettier": "^8.3.0",
 		"eslint-plugin-svelte3": "^4.0.0",
 		"mdsvex": "^0.10.6",
@@ -29,13 +29,14 @@
 		"svelte-preprocess": "^4.10.7",
 		"tslib": "^2.4.0",
 		"typescript": "^4.7.4",
-		"unocss": "^0.42.0"
+		"unocss": "^0.43.2",
+		"vite": "^2.9.13"
 	},
 	"type": "module",
 	"dependencies": {
 		"@iconify-json/tabler": "^1.1.18",
 		"@splidejs/svelte-splide": "^0.2.5",
-		"@unocss/reset": "^0.39.3",
+		"@unocss/reset": "^0.43.2",
 		"firebase": "^9.8.4",
 		"svelte-click-outside": "^1.0.0",
 		"svelte-pagination": "^0.0.1"
